; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_term.c_swapping_screen.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_term.c_swapping_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@full_screen = common dso_local global i64 0, align 8
@T_TI = common dso_local global i64* null, align 8
@NUL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @swapping_screen() #0 {
  %1 = load i64, i64* @full_screen, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i64*, i64** @T_TI, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @NUL, align 8
  %7 = icmp ne i64 %5, %6
  br label %8

8:                                                ; preds = %3, %0
  %9 = phi i1 [ false, %0 ], [ %7, %3 ]
  %10 = zext i1 %9 to i32
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
